student and instructor login implemented

--- a/views/addStudent.ejs
+++ b/views/addStudent.ejs
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> <%= instructor.fullname %> </h1>
-    <form action="/logoutInstructor?_method=DELETE" method="POST">
-        <button type="submit">Log Out</button>
+    <form action="/addStudent" method="post">
+        <input type="email" name="email" placeholder="College Email ID">
+        <button type="submit">Submit</button>
     </form>
 </body>
 </html>
