--- a/views/instructorLogin.ejs
+++ b/views/instructorLogin.ejs
@@ -7,6 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="/instructorLogin" method="post">
+        <input type="email" name="email" placeholder="Email">
+        <input type="password" name="password" placeholder="Password">
+        <button type="submit">Login</button>
+    </form>
+
+    <% if (messages.error) { %>
+        <%= messages.error %>
+    <% } %>
 </body>
 </html>
