added table template

--- a/Project/MernBackend/templates/views/index.hbs
+++ b/Project/MernBackend/templates/views/index.hbs
@@ -24,7 +24,7 @@
             helping individuals to understand and appreciate diverse perspectives and traditions. Through education,
             individuals can develop their full potential and contribute meaningfully to society, creating a brighter and
             more equitable future for all.</p>
-        <button class="btn btn-sm"><a class="nav-link" href="/login"> Login</a> </button>
+        <button class="btn btn-sm" style="margin-bottom: 30px;"><a class="nav-link" href="/login"> Login</a> </button>
     </div>
 </body>
 
