--- a/Project/MernBackend/public/css/style.css
+++ b/Project/MernBackend/public/css/style.css
@@ -1,4 +1,4 @@
-* {
+/* * {
     margin: 0;
     padding: 0;
 }
@@ -35,7 +35,6 @@
 
 .nav-list {
     width: 50%;
-    /*background-color: black;*/
     align-items: center;
     display: flex;
 }
@@ -64,6 +63,225 @@
 
 .rightNav {
     width: 50%;
+    text-align: right;
+    padding: 13px;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.right-nav-list {
+    display: flex;
+}
+
+.right-nav-list li {
+    list-style: none;
+    padding: 26px 30px;
+}
+
+.right-nav-list li a {
+    text-decoration: none;
+    color: white;
+    font-size: 19px;
+}
+
+.right-nav-list li a:hover {
+    text-decoration: none;
+    color: violet;
+}
+
+.rightNav-search {
+    padding: 25px 0px;
+    font-size: 20px;
+    border-radius: 9px;
+}
+
+.content {
+    text-align: center;
+}
+
+.content h1 {
+    font-size: 80px;
+    color: white;
+    font-weight: 500;
+    margin: 50px;
+}
+
+.content p {
+    font-size: 20px;
+    color: white;
+    margin: 50px;
+}
+
+.btn {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 36px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+    cursor: pointer;
+    width: fit-content;
+} */
+
+/* login form */
+
+/* input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #04AA6D;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+  
+button:hover {
+    opacity: 0.8;
+}
+
+form {
+    border: 3px solid #f1f1f1;
+    justify-content: flex-start;
+    padding: 80px 50px;
+}
+
+.loginform{
+    margin: inherit;
+    padding: 10px;
+    float: left;
+    width: 50%;
+}
+
+.loginform{
+    padding: 16px;
+    background-color: black;
+    color: bisque;
+}
+
+.rightpart{
+    display: flex;
+    justify-content: flex-end;
+    float:right;
+    padding: 10px;
+    border: 2px solid black;
+    border-top-left-radius: 600px;
+    background-color: black;
+    width:40%;
+} 
+
+.rightpart img{
+    width: 100%;
+    padding: 10px;
+    border-radius: 50%;
+} */
+
+*{
+    margin: 0;
+    padding: 0;
+    /* background-image: url("background.avif"); */
+}
+html{
+    scroll-behavior: smooth;
+}
+.table-responsive-lg{
+    /* padding: 50px;
+    margin: 100px; */
+    background: url("/img/table_image.jpg");
+    text-align: center;
+}
+
+.thead-dark{
+    background-color: black;
+    color: white;
+}
+
+.table-image{
+    vertical-align: middle;
+}
+
+.img-thumbnail{
+    height: 45mm;
+    width: 35mm;
+}
+
+/* 
+* {
+    margin: 0;
+    padding: 0;
+} */
+
+#myVideo {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+}
+
+.logo {
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo img {
+    width: 40%;
+    border: 3px solid white;
+    border-radius: 10px;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    cursor: pointer;
+    background-color: black;
+}
+
+.nav-list {
+    width: 70%;
+    /*background-color: black;*/
+    align-items: center;
+    display: flex;
+}
+
+.nav-list li {
+    list-style: none;
+    padding: 26px 30px;
+}
+
+.nav-link{
+    text-decoration: none;
+    color: white;
+    font-size: 19px;
+}
+
+.nav-list li a {
+    text-decoration: none;
+    color: white;
+    font-size: 19px;
+}
+
+.nav-list li a:hover {
+    text-decoration: none;
+    color: violet;
+}
+
+.rightNav {
+    width: 30%;
     /*background-color: red;*/
     text-align: right;
     padding: 13px;
@@ -107,7 +325,7 @@
 
 .content h1 {
     /* text-align: center; */
-    font-size: 80px;
+    font-size: 75px;
     color: white;
     font-weight: 500;
     margin: 50px;
@@ -191,4 +409,57 @@ form {
     width: 100%;
     padding: 10px;
     border-radius: 50%;
+}
+
+/* responsive */
+
+.burger{
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 15px;
+}
+
+.line{
+    width: 33px;
+    background-color: white;
+    height: 4px;
+    margin: 3px 3px;
+}
+.firstSection{
+    background-image: url(/img/black-background-08-vecteezy.png);
+    height: 100vh;
+}
+
+@media only screen and (max-width: 1000px){
+    .nav-list{
+        flex-direction: column;
+    }
+    .navbar{
+        flex-direction: column;
+        transition: all 0.7s ease-out;
+        height: 478px;
+    }
+    .rightNav{
+        text-align: center;
+        width: 100%;
+        justify-content: center;
+    }
+    .burger{
+        display: block;
+    }
+    .nav-height-resp{
+        height: 53px;
+    }
+    .visibility-class-resp{
+        opacity: 0;
+    }
+    .firstSection{
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        padding: 0px;
+        overflow-x: hidden;
+    }
 }
