--- a/Project/MernBackend/templates/partials/navbar.ejs
+++ b/Project/MernBackend/templates/partials/navbar.ejs
@@ -6,22 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/style.css">
-    {{!-- <title> Student Information System </title> --}}
+     <!-- <title> Student Information System </title>  -->
 </head>
 
 <body>
-    <nav class="navbar background">
-        <ul class="nav-list">
+    <nav class="navbar background nav-height-resp">
+        <ul class="nav-list visibility-class-resp">
             <div class="logo"><img src="/img/clubs.jpg" alt="Logo"></div>
             <li> <a href="/">Home</a> </li>
-            <li> <a href="#about">About</a> </li>
-            <li> <a href="#services">Services</a> </li>
+            <!-- <li> <a href="#about">About</a> </li>
+            <li> <a href="#services">Services</a> </li> -->
             <li> <a href="#contact">Contact Us</a> </li>
         </ul>
-        <div class="rightNav">
+        <div class="rightNav visibility-class-resp">
             <ul class="right-nav-list">
-                <li><a href="/login">Login</a></li>
+                <li><a href="#login">Login</a></li>
             </ul>
+        </div>
+        <div class="burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
         </div>
     </nav>
 </body>
