--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:wght@100;200;300;400;600;700&family=Rubik+Moonrocks&family=Titan+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/style.css"> 
-    <link rel="stylesheet" href="../css/nav.css">
+    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/nav.css">
 
 </head>
 <body>
@@ -19,8 +19,9 @@
             <a href:="index.html"><img src="../images/Logo1.png" alt=""></a>
         <div class="nav-links" id="navLink">
             <ul>
-                <li><a href="" class="active">HOME</a></li>
-                <li><a href="">SUPPORT</a></li>
+                <li><a href="/" class="active">HOME</a></li>
+                <li><a href="/support">SUPPORT</a></li>
+                <li><a href="/studentdash">SD</a></li>
             </ul>
         </div>
        </nav>
@@ -28,19 +29,19 @@
     </section>
     <section class="option" id="option">
         <div class="container-box">
-        <a href="Studentlogin.html">
+        <a href="/Studentlogin">
         <div class="box">
             <img src="../images/student.png" class="logbox" alt="">
             <h2><br>Student Login</h2>
         </div>
         </a>
-         <a href="Facultylogin.html">
+         <a href="/Facultylogin">
         <div class="box">
             <img src="../images/faculty.png" class="logbox" alt="">
             <h2><br>Faculty Login</h2>
         </div>
          </a>
-        <a href="Adminlogin.html">
+        <a href="/Adminlogin">
         <div class="box">
             <img src="../images/administrator.png" class="logbox" alt="">
             <h2><br>Admin Login</h2>
