--- a/views/Adminlogin.ejs
+++ b/views/Adminlogin.ejs
@@ -1,28 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stylefacultylogin.css">
+    <link rel="stylesheet" href="../css/styleadminlogin.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <title>Student Login</title>
 </head>
+
 <body>
-    <div class="wrapper">
+    <form action="">
         <div class="container main">
             <div class="row">
-                <div class="col-md-6 side-image">    
+                <div class="col-md-6 side-image"> <a for="" class="close-btn1 fa fa-close" href="/"></a>
                 </div>
                 <div class="col-md-6 right">
-                    <a for="" class="close-btn fa fa-close" href="index.html"></a>  
-                     <div class="input-box">
-                        <header>Faculty Login</header>
+                    <a for="" class="close-btn fa fa-close" href="/"></a>
+                    <div class="input-box">
+                        <header>Admin Login</header>
                         <div class="input-field">
-                            <input type="text" class="input" id="userid" required autocomplete="off">
-                            <label for="userid">Faculty Id</label>
+                            <input type="text" class="input" id="username" required autocomplete="off">
+                            <label for="username">Username</label>
                         </div>
                         <div class="input-field">
                             <input type="password" class="input" id="password" required>
@@ -30,15 +31,17 @@
                         </div>
                         <div class="input-field">
                             <input type="submit" class="submit" value="Sign In">
-                            
+
                         </div>
                         <div class="signin">
-                            <span>Having issue in login? <a href="#">Help</a></span>
+                            <span>Having issue in login? <a href="/support">Help</a></span>
                         </div>
-                     </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        </div>
+    </form>
 </body>
+
 </html>
