student result page

--- a/views/instructorHome.ejs
+++ b/views/instructorHome.ejs
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1> <%= instructor.fullname %> </h1>
+    <h1>
+        Welcome Back Instructor, <%= instructor.fullname %>
+    </h1>
+    <button onclick="window.location.href = '/viewInstructorDetails'"> View Instructor Details</button>
+    <button onclick="window.location.href = '/updateInstructorDetails'"> Update Instructor Details</button>
+    <button onclick="window.location.href = '/instructorSemester'"> View semester </button>
     <form action="/logoutInstructor?_method=DELETE" method="POST">
         <button type="submit">Log Out</button>
     </form>
 </body>
+
 </html>
