--- a/views/studentHome.ejs
+++ b/views/studentHome.ejs
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1> Welcome back, <%= student.firstname %></h1>
+    <h1> Welcome back Student, <%= student.firstname %></h1>
     <button onclick="window.location.href = '/viewStudentDetails'"> View Student Details</button>
     <button onclick="window.location.href = '/updateStudentDetails'"> Update Student Details</button>
     <button onclick="window.location.href = '/semesterRegistration'"> Semester Registration</button> </button>
