--- a/views/gradeCard.ejs
+++ b/views/gradeCard.ejs
@@ -45,7 +45,7 @@
                             <%= result[i].courseEnrolled.credits %>
                         </td>
                         <td>
-                            <% if (result[i].courseEnrolled.grade) { %>
+                            <% if (result[i].grade) { %>
                                 <%= result[i].grade %>
                                 <% spi += result[i].grade %>
                                 <% count++ %>
