--- a/views/addAdmin.ejs
+++ b/views/addAdmin.ejs
@@ -4,13 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Add admin</title>
 </head>
 <body>
-    <form action="/addAdmin" method="post">
-        <input type="email" name="email" placeholder="Email ID">
-        <input type="password" name="password" placeholder="Password">
-        <button type="submit">Submit</button>
-    </form>
+    <%- include('adminNavbar') %>
+
+    <div class="main-body-top">
+        <form action="/addAdmin" method="post">
+            <input type="email" name="email" placeholder="Email ID">
+            <input type="password" name="password" placeholder="Password">
+            <button type="submit">Submit</button>
+        </form>
+    </div>
+    
 </body>
 </html>
