--- a/views/addProgram.ejs
+++ b/views/addProgram.ejs
@@ -5,60 +5,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>Add Program</title>
 </head>
 
 <body>
-        <form action="/addProgram" method="post">
-            <select name="degree" id="degree" required>
-                <option value="select" selected>Select</option>
+    <%- include('adminNavbar') %>
+        <div class="main-body-top">
+            <form action="/addProgram" method="post">
+                <select name="degree" id="degree" required>
+                    <option value="select" selected>Select</option>
 
-                <% for (var i=0; i <degree.length; i++) { %>
-                    <option value="<%= degree[i].id %>">
-                        <%= degree[i].name %>
-                    </option>
-                    <% } %>
+                    <% for (var i=0; i <degree.length; i++) { %>
+                        <option value="<%= degree[i].id %>">
+                            <%= degree[i].name %>
+                        </option>
+                        <% } %>
 
-            </select>
-            <br>
-            <select name="branch" id="branch" required>
-                <option value="Select" selected>Select</option>
+                </select>
+                <br>
+                <select name="branch" id="branch" required>
+                    <option value="Select" selected>Select</option>
 
-                <% for (var i=0; i <branch.length; i++) { %>
-                    <option value="<%= branch[i].id %>">
-                        <%= branch[i].name %>
-                    </option>
-                    <% } %>
+                    <% for (var i=0; i <branch.length; i++) { %>
+                        <option value="<%= branch[i].id %>">
+                            <%= branch[i].name %>
+                        </option>
+                        <% } %>
 
-            </select>
-            <br>
-            <table>
-                <tr>
-                    <th>SR No</th>
-                    <th>Name</th>
-                    <th>Code</th>
-                    <th>Credit</th>
-                    <th>Select</th>
-                </tr>
-                <% for (var i=0; i <course.length; i++) { %>
+                </select>
+                <br>
+                <table>
                     <tr>
-                        <td> <%= i+1 %> </td>
-                        <td>
-                            <%= course[i].name %>
-                        </td>
-                        <td>
-                            <%= course[i].code %>
-                        </td>
-                        <td>
-                            <%= course[i].credits %>
-                        </td>
-                        <td> <input type="checkbox" id="" name="course" value="<%= course[i].id %>"><span class="checkmark"></span></td>
+                        <th>SR No</th>
+                        <th>Name</th>
+                        <th>Code</th>
+                        <th>Credit</th>
+                        <th>Select</th>
                     </tr>
-                    <% } %>
-            </table>
-            <button type="submit">Submit</button>
-        </form>
+                    <% for (var i=0; i <course.length; i++) { %>
+                        <tr>
+                            <td>
+                                <%= i+1 %>
+                            </td>
+                            <td>
+                                <%= course[i].name %>
+                            </td>
+                            <td>
+                                <%= course[i].code %>
+                            </td>
+                            <td>
+                                <%= course[i].credits %>
+                            </td>
+                            <td> <input type="checkbox" id="" name="course" value="<%= course[i].id %>"><span
+                                    class="checkmark"></span></td>
+                        </tr>
+                        <% } %>
+                </table>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+
 
 </body>
 
