--- a/views/addSemester.ejs
+++ b/views/addSemester.ejs
@@ -5,38 +5,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
+    <title>Add Semester</title>
 </head>
 
 <body>
-    <form action="/addSemester" method="post">
-        <h3>Step - 1</h3>
-        <input type="text" placeholder="Name" name="name">
-        <br>
-        <table>
-            <tr>
-                <th>SR No</th>
-                <th>Program</th>
-                <th>Select</th>
-            </tr>
-            <% for (var i=0; i <program.length; i++) { %>
+    <%- include('adminNavbar') %>
+    <div class="main-body-top">
+        <form action="/addSemester" method="post">
+            <h3>Step - 1</h3>
+            <input type="text" placeholder="Name" name="name">
+            <br>
+            <table>
                 <tr>
-                    <td>
-                        <%= i+1 %>
-                    </td>
-                    <td>
-                        <%= program[i].degreeOffered.name %>
-
-                            <%= program[i].branchOffered.name %>
-                    </td>
-                    <td> <input type="checkbox" name="program" value="<%= program[i].id %>"><span
-                            class="checkmark"></span></td>
+                    <th>SR No</th>
+                    <th>Program</th>
+                    <th>Select</th>
                 </tr>
-                <% } %>
-        </table>
-        <button type="submit">Next</button>
-    </form>
+                <% for (var i=0; i <program.length; i++) { %>
+                    <tr>
+                        <td>
+                            <%= i+1 %>
+                        </td>
+                        <td>
+                            <%= program[i].degreeOffered.name %>
+    
+                                <%= program[i].branchOffered.name %>
+                        </td>
+                        <td> <input type="checkbox" name="program" value="<%= program[i].id %>"><span
+                                class="checkmark"></span></td>
+                    </tr>
+                    <% } %>
+            </table>
+            <button type="submit">Next</button>
+        </form>
+    </div>
+    
 
 </body>
 
