--- a/views/adminHome.ejs
+++ b/views/adminHome.ejs
@@ -1,23 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Admin-dashboard</title>
 </head>
+
+
 <body>
-    <h1> Admin </h1>
-    <button onclick="window.location.href = '/viewCourse'"> Course </button>
-    <button onclick="window.location.href = '/viewProgram'"> Program</button>
-    <button onclick="window.location.href = '/viewDegree'">  Degree</button>
-    <button onclick="window.location.href = '/viewBranch'"> Branch</button>
-    <button onclick="window.location.href = '/viewSemester'"> Semester</button>
-    <button onclick="window.location.href = '/addStudent'"> Add Student</button>
-    <button onclick="window.location.href = '/addInstructor'"> Add Instructor</button>
-    <button onclick="window.location.href = '/addAdmin'"> Add Admin</button>
-    <form action="/logoutAdmin?_method=DELETE" method="POST">
-        <button type="submit">Log Out</button>
-    </form>
+    <%- include('adminNavbar') %>
+    
+    <!-- main body section -->
+    <div class="main-body">
+        <h1>Admin Dashboard</h1>
+        <h1>
+
+        </h1>
+    </div>
 </body>
+
 </html>
