--- a/views/viewSemester.ejs
+++ b/views/viewSemester.ejs
@@ -5,65 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Semesters</title>
 </head>
 
 <body>
-    <h3>Semesters</h3>
-    <form action="/viewSemester" method="post">
-        <table>
-            <tr>
-                <th>SR No</th>
-                <th>Name</th>
-                <th>Edit</th>
-                <th>Delete</th>
-            </tr>
-            <% if (!semester) {%>
-                <tr>
-                    <td colspan="4">
-                        No semesters found
-                    </td>
-                </tr>
-                <% } else { %>
-                    <% for (var i=0; i <semester.length; i++) { %>
+    <%- include('adminNavbar') %>
+        <div class="main-body-top">
+            <h3>Semesters</h3>
+            <form action="/viewSemester" method="post">
+                <table>
+                    <tr>
+                        <th>SR No</th>
+                        <th>Name</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
+                    </tr>
+                    <% if (!semester) {%>
                         <tr>
-                            <td>
-                                <%= i+1 %>
-                            </td>
-                            <td>
-                                <%= semester[i].name %>
-                            </td>
-                            <td>
-                                <button type='submit' name="edit" value="<%= semester[i].id %>"><i
-                                        class='far fa-edit'></i></button>
-                            </td>
-                            <td>
-                                <button type='submit' name="delete" value="<%= semester[i].id %>" class="delete-btn"><i
-                                        class='far fa-trash-alt'></i></button>
+                            <td colspan="4">
+                                No semesters found
                             </td>
                         </tr>
-                        <% } %>
-                            <% } %>
-        </table>
-    </form>
+                        <% } else { %>
+                            <% for (var i=0; i <semester.length; i++) { %>
+                                <tr>
+                                    <td>
+                                        <%= i+1 %>
+                                    </td>
+                                    <td>
+                                        <%= semester[i].name %>
+                                    </td>
+                                    <td>
+                                        <button type='submit' name="edit" value="<%= semester[i].id %>"><i
+                                                class='far fa-edit'></i></button>
+                                    </td>
+                                    <td>
+                                        <button type='submit' name="delete" value="<%= semester[i].id %>"
+                                            class="delete-btn"><i class='far fa-trash-alt'></i></button>
+                                    </td>
+                                </tr>
+                                <% } %>
+                                    <% } %>
+                </table>
+            </form>
 
-    <br>
-    <button onclick="window.location.href = '/addSemester'"> Add Semester </button>
+            <br>
+            <button onclick="window.location.href = '/addSemester'"> Add Semester </button>
+        </div>
 
-    <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
-    <script>
-        let btns = document.getElementsByClassName('delete-btn');
 
-        for (i of btns) {
-            i.addEventListener('click', function () {
-                if (!confirm("Are you sure you want to delete?")) {
-                    event.preventDefault();
-                }
-            });
-        }
-    </script>
+        <script src="https://kit.fontawesome.com/2bdd553bc7.js" crossorigin="anonymous"></script>
+        <script>
+            let btns = document.getElementsByClassName('delete-btn');
+
+            for (i of btns) {
+                i.addEventListener('click', function () {
+                    if (!confirm("Are you sure you want to delete?")) {
+                        event.preventDefault();
+                    }
+                });
+            }
+        </script>
 </body>
 
 </html>
