--- a/Project/MernBackend/templates/partials/navbar.ejs
+++ b/Project/MernBackend/templates/partials/navbar.ejs
@@ -20,7 +20,7 @@
         </ul>
         <div class="rightNav visibility-class-resp">
             <ul class="right-nav-list">
-                <li><a href="#login">Login</a></li>
+                <li><a href="/login">Login</a></li>
             </ul>
         </div>
         <div class="burger">
