--- a/Project/MernBackend/templates/views/index.ejs
+++ b/Project/MernBackend/templates/views/index.ejs
@@ -28,7 +28,7 @@
                 individuals can develop their full potential and contribute meaningfully to society, creating a brighter
                 and
                 more equitable future for all.</p>
-            <button class="btn btn-sm" style="margin-bottom: 30px;"><a class="nav-link" href="#login"> Login</a>
+            <button class="btn btn-sm" style="margin-bottom: 30px;"><a class="nav-link" href="/login"> Login</a>
             </button>
         </div>
         <footer class="footer" id="contact" style="color:white; padding: 60px;">
