--- a/Project/MernBackend/templates/views/tables.ejs
+++ b/Project/MernBackend/templates/views/tables.ejs
@@ -12,56 +12,56 @@
 </head>
 
 <body>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-  <div class="table-responsive-lg">
-    <table class="table table-striped table-bordered table-image">
-      <thead class="thead-dark">
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">COL1</th>
-          <th scope="col">COL2</th>
-          <th scope="col">COL3</th>
-          <th scope="col">COL4</th>
-          <th scope="col">COL5</th>
-          <th scope="col">COL6</th>
-          <th scope="col">PROFILE</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">1</th>
-          <td>Mark</td>
-          <td>Otto</td>
-          <td>@mdo</td>
-          <td>abcd</td>
-          <td>abcd</td>
-          <td>abcd</td>
-          <td><img src="/img/child.jpg" class="img-thumbnail" alt="profile"></td>
-        </tr>
-        <tr>
-          <th scope="row">2</th>
-          <td>Jacob</td>
-          <td>Thornton</td>
-          <td>@fat</td>
-          <td>abcd</td>
-          <td>abcd</td>
-          <td>abcd</td>
-          <td><img src="/img/child.jpg" class="img-thumbnail" alt="profile"></td>
-        </tr>
-        <tr>
-          <th scope="row">3</th>
-          <td>Larry</td>
-          <td>the Bird</td>
-          <td>@twitter</td>
-          <td>abcd</td>
-          <td>abcd</td>
-          <td>abcd</td>
-          <td><img src="/img/child.jpg" class="img-thumbnail" alt="profile"></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script> -->
+    <div class="table-responsive-lg">
+      <table class="table table-bordered table-image">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">COL1</th>
+            <th scope="col">COL2</th>
+            <th scope="col">COL3</th>
+            <th scope="col">COL4</th>
+            <th scope="col">COL5</th>
+            <th scope="col">COL6</th>
+            <th scope="col">PROFILE</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+            <td>abcd</td>
+            <td>abcd</td>
+            <td>abcd</td>
+            <td><img src= "https://source.unsplash.com/random" class="img-thumbnail" alt="profile"></td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+            <td>abcd</td>
+            <td>abcd</td>
+            <td>abcd</td>
+            <td><img src="https://source.unsplash.com/random" class="img-thumbnail" alt="profile"></td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>Larry</td>
+            <td>the Bird</td>
+            <td>@twitter</td>
+            <td>abcd</td>
+            <td>abcd</td>
+            <td>abcd</td>
+            <td><img src="https://source.unsplash.com/random" class="img-thumbnail" alt="profile"></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 </body>
 
 </html>
