--- a/views/adminNavbar.ejs
+++ b/views/adminNavbar.ejs
@@ -43,15 +43,19 @@
             <li>
                 <a href="/viewCourse">
                     <i class='bx bx-folder-plus'></i>
-                    <span class="link_name">Course</span>
+                    <span class="link_name">Course Management</span>
                 </a>
                 <a href="/viewProgram">
                     <i class='bx bxs-file-plus'></i>
-                    <span class="link_name">Manage Program</span>
+                    <span class="link_name">Program Management</span>
+                </a>
+                <a href="/viewSemester">
+                    <i class='bx bxs-file-plus'></i>
+                    <span class="link_name">Semester Management</span>
                 </a>
                 <a href="#">
                     <i class='bx bx-money'></i>
-                    <span class="link_name">Fees</span>
+                    <span class="link_name">Fees Management</span>
                 </a>
             </li>
             <li>
