--- a/views/semesterRegistration.ejs
+++ b/views/semesterRegistration.ejs
@@ -5,65 +5,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
-    <title>Document</title>
+    <title>Semester Registration</title>
 </head>
 
 <body>
-    <h3>Upcoming semester : <%= semesterAssignments[0].semesterAssigned.name %>
-    </h3>
-    <h5>Program : <%= semesterAssignments[0].programAssigned.degreeOffered.name %>
-            <%= semesterAssignments[0].programAssigned.branchOffered.name %>
-    </h5>
-    <form action="/semesterRegistration" method="post">
-        <table>
-            <tr>
-                <th>SR No</th>
-                <th>Course Code</th>
-                <th>Course Name</th>
-                <th>Course Credits</th>
-                <th>Instructor</th>
-                <th>Select</th>
-            </tr>
-
-            <% if (semesterAssignments.length==0) {%>
+    <%- include('studentNavbar') %>
+    <div class="main-body-top">
+        <h3>Upcoming semester : <%= semesterAssignments[0].semesterAssigned.name %>
+        </h3>
+        <h5>Program : <%= semesterAssignments[0].programAssigned.degreeOffered.name %>
+                <%= semesterAssignments[0].programAssigned.branchOffered.name %>
+        </h5>
+        <form action="/semesterRegistration" method="post">
+            <table>
                 <tr>
-                    <td colspan="6">
-                        No courses found
-                    </td>
+                    <th>SR No</th>
+                    <th>Course Code</th>
+                    <th>Course Name</th>
+                    <th>Course Credits</th>
+                    <th>Instructor</th>
+                    <th>Select</th>
                 </tr>
-                <% } %>
-
-                    <% for (var i=0; i <semesterAssignments.length; i++) { %>
-                        <tr>
-                            <td>
-                                <%= i+1 %>
-                            </td>
-                            <td>
-                                <%= semesterAssignments[i].courseAssigned.code %>
-                            </td>
-                            <td>
-                                <%= semesterAssignments[i].courseAssigned.name %>
-                            </td>
-                            <td>
-                                <%= semesterAssignments[i].courseAssigned.credits %>
-                            </td>
-                            <td>
-                                <% if (semesterAssignments[i].instructorAssigned.fullname) {%>
-                                    <%= semesterAssignments[i].instructorAssigned.fullname %>
-                                        <% } %>
-                            </td>
-                            <td>
-                                <input type="checkbox" name="register" value="<%= semesterAssignments[i].courseAssigned.id %>"><span
-                                    class="checkmark"></span>
-                            </td>
-                        </tr>
-                        <% } %>
-
-        </table>
-
-        <button type='submit' name="sem" value="<%= semesterAssignments[0].semesterAssigned.id %>"> Register </button>
-    </form>
+    
+                <% if (semesterAssignments.length==0) {%>
+                    <tr>
+                        <td colspan="6">
+                            No courses found
+                        </td>
+                    </tr>
+                    <% } %>
+    
+                        <% for (var i=0; i <semesterAssignments.length; i++) { %>
+                            <tr>
+                                <td>
+                                    <%= i+1 %>
+                                </td>
+                                <td>
+                                    <%= semesterAssignments[i].courseAssigned.code %>
+                                </td>
+                                <td>
+                                    <%= semesterAssignments[i].courseAssigned.name %>
+                                </td>
+                                <td>
+                                    <%= semesterAssignments[i].courseAssigned.credits %>
+                                </td>
+                                <td>
+                                    <% if (semesterAssignments[i].instructorAssigned.fullname) {%>
+                                        <%= semesterAssignments[i].instructorAssigned.fullname %>
+                                            <% } %>
+                                </td>
+                                <td>
+                                    <input type="checkbox" name="register" value="<%= semesterAssignments[i].courseAssigned.id %>"><span
+                                        class="checkmark"></span>
+                                </td>
+                            </tr>
+                            <% } %>
+    
+            </table>
+    
+            <button type='submit' name="sem" value="<%= semesterAssignments[0].semesterAssigned.id %>"> Register </button>
+        </form>
+    </div>
 </body>
 
 </html>
