--- a/views/studentDetails.ejs
+++ b/views/studentDetails.ejs
@@ -9,11 +9,12 @@
 </head>
 
 <body>
+
     <form action="/studentDetails" method="post">
-        <input type="text" placeholder="First Name" name="firstname">
-        <input type="text" placeholder="Middle Name" name="middlename">
-        <input type="text" placeholder="Last Name" name="lastname">
-        <input type="text" placeholder="Student ID" name="sid">
+        <input type="text" placeholder="First Name" name="firstname" required>
+        <input type="text" placeholder="Middle Name" name="middlename" required>
+        <input type="text" placeholder="Last Name" name="lastname" required>
+        <input type="text" placeholder="Student ID" name="sid" required>
         <select name="myProgram" required>
             <option value="Select" selected>Select</option>
 
@@ -28,19 +29,19 @@
             <% } %>
 
         </select>
-        <input type="date" placeholder="Date of Birth" name="dob">
-        <input type="text" placeholder="Mobile number" name="mobileNO">
+        <input type="date" placeholder="Date of Birth" name="dob" required>
+        <input type="text" placeholder="Mobile number" name="mobileNO" required>
         <input type="email" placeholder="College email ID" value="<%= student.email %>" name="email" disabled>
-        <input type="email" placeholder="Personal email ID" name="myemail">
-        <input type="email" placeholder="Parent email ID" name="parentEmail">
+        <input type="email" placeholder="Personal email ID" name="myemail" required>
+        <input type="email" placeholder="Parent email ID" name="parentEmail" required>
         <div class="radio-checkbox-container">
             <p>Gender</p>
             <label> <input type="radio" id="male" name="gender" value="Male" required> <span>Male</span></label>
             <label> <input type="radio" id="female" name="gender" value="Female" required> <span>Female</span></label>
             <label> <input type="radio" id="other" name="gender" value="Other" required> <span>Other</span></label>
         </div>
-        <input type="password" name="password" placeholder="New password">
-        <input type="password" name="repassword" placeholder="Confirm password">
+        <input type="password" name="password" placeholder="New password" required>
+        <input type="password" name="repassword" placeholder="Confirm password" required>
         <button type="submit">Submit</button>
     </form>
 </body>
