--- a/views/studentHome.ejs
+++ b/views/studentHome.ejs
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Student dashboard</title>
 </head>
 <body>
-    <h1> Welcome back Student, <%= student.firstname %></h1>
-    <button onclick="window.location.href = '/viewStudentDetails'"> View Student Details</button>
-    <button onclick="window.location.href = '/updateStudentDetails'"> Update Student Details</button>
-    <button onclick="window.location.href = '/semesterRegistration'"> Semester Registration</button> </button>
-    <button onclick="window.location.href = '/semesterResults'"> Semester Results </button>
-    <form action="/logoutStudent?_method=DELETE" method="POST">
-        <button type="submit">Log Out</button>
-    </form>
+    <%- include('studentNavbar') %>
+    <!-- main body section -->
+    <div class="main-body">
+        <h1>Student Dashboard</h1>
+        <h1>
+
+        </h1>
+    </div>
 </body>
 </html>
